--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "sitemap": "babel-node ./sitemap-builder.js"
   },
   "resolutions": {
