fix deploy script

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://husam287.github.io/HD-stores-dashboard",
   "name": "hd-stores",
   "version": "1.0.0",
   "private": true,
